fix: padding cutting off text

--- a/src/style/components/search-input.less
+++ b/src/style/components/search-input.less
@@ -99,7 +99,7 @@
   min-width: 65px;
   height: 48px;
   flex: 1 1;
-  padding: 0 40px;
+  padding: 0 0 0 40px;
   border: 1px solid var(--text-input-border);
   appearance: none;
   background: var(--text-input-background);
